# gov-contracts-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.mlflow  Makefile  README.md  SUMMARY_DAY3.md  docker-compose.yml  requirements-scripts.txt  test_incremental_ingestion.py  test_state_manager_simple.py
.github/workflows/: ci.yml
airflow/: pyproject.toml
airflow/config/: airflow.cfg  set-password.sh
airflow/dags/: exemplo_01_hello_world.py
airflow/dags/bronze/: __init__.py  pncp_backfill.py  pncp_daily_ingestion.py  pncp_hourly_ingestion.py
airflow/dags/bronze/pncp/: __init__.py  backfill.py  cleanup_day.py  daily_ingestion.py  details_daily_ingestion.py  details_hourly_ingestion.py  hourly_ingestion.py
airflow/dags/silver/: __init__.py  bronze_to_silver.py
airflow/dags/utils/: __init__.py  clients.py  dates.py  notifications.py  pncp_config.py
backend/: .coveragerc  .env.example  .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/core/: cnpj_client.py  config.py  datetime_utils.py  health_checks.py  minio_client.py  pncp_client.py  storage_client.py
backend/app/domains/: __init__.py
backend/app/domains/cnpj/: __init__.py  entity_type.py
backend/app/domains/pncp/: __init__.py  amparo_legal.py  categoria_item_plano.py  categoria_processo.py  criterio_julgamento.py  instrumento_convocatorio.py  modalidade_contratacao.py  modo_disputa.py  natureza_juridica.py  porte_empresa.py  situacao_contratacao.py  situacao_item_contratacao.py  situacao_resultado_item.py  tipo_beneficio.py  tipo_contrato.py  tipo_documento.py  tipo_termo_contrato.py  utils.py
backend/app/services/: __init__.py  data_collector.py  data_transformer.py  data_validator.py  state_management.py
backend/app/services/ingestion/: __init__.py  cnpj.py  pncp.py  pncp_details.py
backend/app/services/transformation/: __init__.py  data.py
backend/app/utils/: logger.py  metrics.py
backend/tests/: conftest.py  test_main.py
data/: .gitkeep  details.json
docs/: AIRFLOW_PATHS_CONFIG.md  CHECKPOINT_IMPLEMENTATION.md  DATA_PERSISTENCE_AND_BACKUP.md  INCREMENTAL_INGESTION.md  MINIO_BUCKETS_CONFIG.md  PARQUET_MIGRATION.md  PRD.md  README.md  TESTING_GUIDE.md  airflow-dags-strategy.md  commit-conventions.md  docker-setup.md  docker-smart-startup.md  how-to-run-dags-manually.md  infrastructure.md  minio-buckets-setup.md  pendulum-migration-plan.md  project-structure.md  project_estructure.md  setup-dependencies.md  standalone-services-guide.md  storage-abstraction.md  technology-decisions.md  terminology-guide.md  timezone-audit.md  timezone-handling.md
docs/architecture/: xcom-optimization.md
docs/day-by-day/: 2025-10-11.md  2025-10-21.md  2025-10-22.md  2025-10-23-afternoon.md  2025-10-23-timezone-fixes.md  2025-10-23.md  2025-10-24.md  2025-11-09-pncp-details-chunking.md
docs/lake-house/: lake-house.md  minio.md
infrastructure/: init-db.sh
infrastructure/docker/: .env.example  README.md  docker-compose.yml
infrastructure/docker/airflow/: Dockerfile  README.md  compose.yml  requirements.txt
infrastructure/docker/dev-tools/: compose.yml
infrastructure/docker/minio/: .env.example  Dockerfile  compose.yml  init-buckets.sh
infrastructure/docker/mlflow/: README.md  compose.yml
infrastructure/docker/opensearch/: Dockerfile  README.md  compose.yml
infrastructure/docker/opensearch-dashboards/: Dockerfile  README.md  compose.yml
infrastructure/docker/postgres/: .env.example  Dockerfile  compose.yml  pg_hba.conf  postgresql.conf
infrastructure/docker/postgres/init-scripts/: 00-create-airflow-db.sql  01-create-extensions.sql  02-create-schemas.sql  03-create-users.sql  04-create-functions.sql
infrastructure/docker/redis/: .env.example  Dockerfile  compose.yml  redis.conf
ml/: pyproject.toml
notebooks/: .gitkeep
scripts/: README.md  airflow_update_dags.sh  backup_all.sh  check-buckets.sh  consolidate_bronze_day.py  force_delete_bucket.py  refactor_dags_xcom.py  report_pncp_bronze.py  report_pncp_details.py  run_pncp_details_ingestion.py  run_pncp_ingestion.py  test_cnpj_ingestion.py  test_dag_directly.py
