[tool.poetry]
name = "gov-contracts-airflow"
version = "0.1.0"
description = "Airflow DAGs for Gov Contracts AI data pipelines"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "dags"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
apache-airflow = "2.7.3"
pandas = "2.1.3"
pyarrow = "14.0.1"
python-dateutil = "2.8.2"

# S3/MinIO - Object Storage
boto3 = "1.29.7"
s3fs = "2023.12.0"

# HTTP Clients
requests = "2.31.0"
urllib3 = "2.1.0"

# Data Validation
great-expectations = "0.18.4"

# Database
psycopg2-binary = "2.9.9"
sqlalchemy = "2.0.23"

# Data Models & Validation
pydantic = "2.5.0"

# Configuration
python-dotenv = "1.0.0"

# Utilities
tenacity = "2.3"  # Retry logic for resilient API calls

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
