[tool.poetry]
name = "gov-contracts-ml"
version = "0.1.0"
description = "Machine Learning pipelines for Gov Contracts AI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core ML
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
scipy = "^1.11.4"

# Deep Learning (for NLP/BERT)
torch = "^2.1.1"
transformers = "^4.35.2"

# Model Tracking & Experiment Management
mlflow = "^2.8.1"
optuna = "^3.4.0"

# Model Serving
onnx = "^1.15.0"
onnxruntime = "^1.16.3"

# Explainability
shap = "^0.43.0"

# Data Quality
great-expectations = "^0.18.4"

# Data Formats
pyarrow = "^14.0.1"
openpyxl = "^3.1.2"

# Visualization
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
plotly = "^5.18.0"

# Utils
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
joblib = "^1.3.2"
tqdm = "^4.66.1"

# S3/Data Storage
boto3 = "^1.29.7"
s3fs = "^2023.12.0"

# Database (for feature store)
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"
black = "^23.11.0"

# Data Version Control
dvc = {extras = ["s3"], version = "^3.30.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # More lenient for notebooks

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
